--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 
 
-#section-1 {
+#Section-1 {
   background: url(http://127.0.0.1:5500/image/deer.jpg) no-repeat center center ;  
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -42,13 +42,44 @@
   background-repeat: no-repeat;
   background-size: cover;
       
-      }
-  #jumbotron {
-    
-    background-size: cover;
-  }
+ }
+
+ #section-4 {
+  background: url(/image/bird.jpg) no-repeat center center ;  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 500px;
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+  
+}
+
+
+  
+  
+  
 
 
 .navbar {
   position: fixed;
+  
 }
+ .navbar .navbar-brand {
+   font-family: pacifico, cursive;
+   font-size: 60px;
+   color: red;
+ }
+
+ .display-5 {
+   font-family: Roboto;
+   font-size: 75px;
+   padding-top: 75px;
+ }
+
+ .nav-link {
+   font-size: 25px;
+ }
