--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
     }
 
     #section-3 {
-      background: url(/image/kittens.jpg) no-repeat center center ;  
+      background: url(http://127.0.0.1:5500/image/kittens.jpg) no-repeat center center ;  
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -45,7 +45,7 @@
  }
 
  #section-4 {
-  background: url(/image/bird.jpg) no-repeat center center ;  
+  background: url(http://127.0.0.1:5500/image/bird.jpg) no-repeat center center ;  
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
